# webserv

./: .gitignore  CMakeLists.txt  Location.cpp  Location.hpp  Makefile  README.md  Server.cpp  data.txt  main.cpp  test.conf  text  webserv  webserv.conf
Core/: Socket.cpp  Socket.hpp
includes/: ClientSocket.hpp  DataStorage.hpp  EventManager.hpp  HTTP_request.hpp  Location.hpp  ParsingServer.hpp  Request.hpp  Response.hpp  Server.hpp  ServerConfig.hpp  ServerSocket.hpp  Socket.hpp  WebServHeaders.hpp  webserv.hpp
sources/HTTP/: Request.cpp  Response.cpp
sources/core/: ClientSocket.cpp  DataStorage.cpp  EventManager.cpp  Server.cpp  ServerSocket.cpp  Socket.cpp  main.cpp
sources/dimka/: HTTP_request.cpp  Location.cpp  ParsingServer.cpp  Server.cpp  main.cpp  webserv.cpp
sources/main/: main.cpp
www/: 20231024104657_{"query":"\n  tm.txt
www/bin-cgi/: calculator(GetRequest).py  calculator.py  data.py  data.txt  downloader.py  increment.py  uploader.py
www/data/: 20231026112248_CMakeLists.txt  20231028154530_eval.txt  404.html
www/error/: 404.html
www/errors/standardErrors/: HTTP405.html  HTTP505.html
www/images/: uploader.py
www/staticHTML/: FetchUploader.js  counter.html  deleater.html  index.html  uploader.html
www/toDelete/: counter.html  deleater.html
